docs/0.17/_sources/api/gammapy.datasets.SpectrumDataset.rst.txt
SpectrumDataset
===============

.. currentmodule:: gammapy.datasets

.. autoclass:: SpectrumDataset
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpectrumDataset.data_shape
      ~SpectrumDataset.energy_range
      ~SpectrumDataset.evaluators
      ~SpectrumDataset.excess
      ~SpectrumDataset.exposure
      ~SpectrumDataset.mask
      ~SpectrumDataset.mask_safe
      ~SpectrumDataset.models
      ~SpectrumDataset.name
      ~SpectrumDataset.stat_type
      ~SpectrumDataset.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpectrumDataset.copy
      ~SpectrumDataset.create
      ~SpectrumDataset.fake
      ~SpectrumDataset.info_dict
      ~SpectrumDataset.npred
      ~SpectrumDataset.npred_sig
      ~SpectrumDataset.peek
      ~SpectrumDataset.plot_counts
      ~SpectrumDataset.plot_fit
      ~SpectrumDataset.plot_residuals
      ~SpectrumDataset.residuals
      ~SpectrumDataset.stack
      ~SpectrumDataset.stat_array
      ~SpectrumDataset.stat_sum

   .. rubric:: Attributes Documentation

   .. autoattribute:: data_shape
   .. autoattribute:: energy_range
   .. autoattribute:: evaluators
   .. autoattribute:: excess
   .. autoattribute:: exposure
   .. autoattribute:: mask
   .. autoattribute:: mask_safe
   .. autoattribute:: models
   .. autoattribute:: name
   .. autoattribute:: stat_type
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: fake
   .. automethod:: info_dict
   .. automethod:: npred
   .. automethod:: npred_sig
   .. automethod:: peek
   .. automethod:: plot_counts
   .. automethod:: plot_fit
   .. automethod:: plot_residuals
   .. automethod:: residuals
   .. automethod:: stack
   .. automethod:: stat_array
   .. automethod:: stat_sum
